--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-dj-database-url
+dj-database-url==0.4.1
 Django==1.9.9
-django-postgrespool
-gunicorn
-psycopg2
-SQLAlchemy
-whitenoise
-xadmin
+django-postgrespool==0.3.0
+gunicorn==19.6.0
+psycopg2==2.6.2
+SQLAlchemy==1.0.15
+whitenoise==3.2.1
+xadmin==0.6.1
+django-crispy-forms==1.6.0
+django-formtools==1.0
+httplib==0.9.2
+django-reversion
