--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-dj-database-url==0.4.1
 Django==1.9.9
-django-postgrespool==0.3.0
-gunicorn==19.6.0
-psycopg2==2.6.2
-SQLAlchemy==1.0.15
-whitenoise==3.2.1
-xadmin==0.6.1
 django-crispy-forms==1.6.0
 django-formtools==1.0
-httplib2==0.9.2
 django-reversion==2.0.6
+django-xadmin==0.5.0
+httplib2==0.9.2
+virtualenv==15.0.3
+whitenoise==3.2.1
+xadmin==0.6.1
 xlwt==1.1.2
