--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 Django==1.9.9
-django-crispy-forms==1.6.0
-django-formtools==1.0
-django-reversion==2.0.6
-django-xadmin==0.5.0
-httplib2==0.9.2
-virtualenv==15.0.3
-whitenoise==3.2.1
+django-crispy-forms
+django-formtools
+django-reversion
+httplib2
+virtualenv
+whitenoise
 xadmin==0.6.1
-xlwt==1.1.2
-gunicorn
-psycopg
+xlwt
+gunicorn==19.6.0
+psycopg2
