--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ Django==1.9.9
 django-crispy-forms
 django-formtools
 django-reversion
+django-xadmin==0.6.1
 httplib2
 virtualenv
 whitenoise
-xadmin==0.6.1
 xlwt
 gunicorn==19.6.0
-psycopg2
+psycopg2==2.6.2
