--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,8 @@ Django==1.9.9
 django-crispy-forms
 django-formtools
 django-reversion
-django-xadmin==0.6.1
+django-xadmin
 httplib2
-virtualenv
-whitenoise
 xlwt
 gunicorn==19.6.0
 psycopg2==2.6.2
