--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 Django==1.9.9
+django-crispy-forms==1.6.0
+django-formtools==1.0
+django-reversion==2.0.6
+django-xadmin==0.5.0
+httplib2==0.9.2
+xlwt==1.1.2
 gunicorn==19.6.0
 psycopg2==2.6.2
 xadmin==0.6.1
