--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ django-crispy-forms==1.6.0
 django-formtools==1.0
 django-reversion==2.0.6
 django-xadmin==0.5.0
+dj-database-url==0.4.1
 httplib2==0.9.2
 xlwt==1.1.2
 gunicorn==19.6.0
